# hf-quant-stack

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  RUNBOOK.md  config.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  format.yml
src/: __init__.py  cli.py  config.py
src/backtest/: __init__.py  engine.py  events.py  execution.py  portfolio.py
src/data/: __init__.py  fetcher.py  normalizer.py  sample.py  universe.py
src/db/: __init__.py  models.py  session.py
src/execution/: __init__.py  base.py  broker_interface.py  paper_alpaca.py
src/risk/: __init__.py  constraints.py  drawdown.py
src/strategies/: __init__.py  base.py  mean_reversion.py  momentum.py  risk_parity.py
src/utils/: __init__.py  logging.py  timing.py
tests/: __init__.py  test_strategies.py
