[tool.poetry]
name = "hf-quant-stack"
version = "0.1.0"
description = "Hedge fund-style automated trading system"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"
numpy = "^1.24.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.7"
alembic = "^1.12.0"
alpaca-py = "^0.20.0"
optuna = "^3.4.0"
scikit-learn = "^1.3.0"
statsmodels = "^0.14.0"
matplotlib = "^3.7.0"
plotly = "^5.15.0"
streamlit = "^1.25.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0"
requests = "^2.31.0"
jupyter = "^1.0.0"
click = "^8.1.0"
rich = "^13.5.0"
loguru = "^0.7.0"
pydantic = "^2.3.0"
backtrader = "^1.9.78.123"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
pre-commit = "^3.3.0"

[tool.poetry.scripts]
hf-quant = "src.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term-missing"